crates/plotnik-tests/tests/03-analyze/empty_constructs/empty_alternation_with_comment.txt
Q = [ /* comment */ ]
------------------ DIAGNOSTICS -------------------
error: empty `[]` matches nothing
 --> query.ptk:1:5
  |
1 | Q = [ /* comment */ ]
  |     ^^^^^^^^^^^^^^^^^
  |
help: alternations must contain at least one branch
-------------------- SYMBOLS ---------------------
